[gd_scene load_steps=10 format=3 uid="uid://4jqa1vdmqwry"]

[ext_resource type="StyleBox" uid="uid://c84c3q25b2vo3" path="res://Themes/hover_button.tres" id="1_y53ex"]
[ext_resource type="StyleBox" uid="uid://blmm4ii14xlj" path="res://Themes/normal_button.tres" id="2_6sksd"]
[ext_resource type="Script" uid="uid://cnuwug26ipd5u" path="res://Scenes/Menu_Scenes/records.gd" id="3_y53ex"]
[ext_resource type="Texture2D" uid="uid://b47wkg5ccxbtd" path="res://Assets/gui/GUI.png" id="4_d2m64"]
[ext_resource type="Texture2D" uid="uid://crtr0l7r46qhp" path="res://Assets/shit/game_menu_background.png" id="5_r3me4"]

[sub_resource type="Theme" id="Theme_1rerr"]
Button/font_sizes/font_size = 20
Button/styles/focus = null
Button/styles/hover = ExtResource("1_y53ex")
Button/styles/normal = ExtResource("2_6sksd")
Button/styles/pressed = null

[sub_resource type="AtlasTexture" id="AtlasTexture_1rerr"]
atlas = ExtResource("4_d2m64")
region = Rect2(2, 34, 44, 44)

[sub_resource type="LabelSettings" id="LabelSettings_y53ex"]
font_color = Color(1, 1, 0.556863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6sksd"]

[node name="Records" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1rerr")
script = ExtResource("3_y53ex")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -117.0
offset_right = 112.5
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1rerr")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -130.0
offset_right = 98.5
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Records Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
z_index = 5
layout_mode = 2

[node name="time_label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "time"
label_settings = SubResource("LabelSettings_y53ex")
horizontal_alignment = 1
vertical_alignment = 1

[node name="world_label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "world"
label_settings = SubResource("LabelSettings_6sksd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 0
z_index = -20
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_r3me4")
expand_mode = 2

[connection signal="pressed" from="NinePatchRect/VBoxContainer/Back" to="." method="_on_back_pressed"]
